# lisensei

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
src/: bopomofo.rs  font.rs  lib.rs  main.rs  moedict.rs
tests/: test_moe_dict.rs
